# nemo-extensions

./: .gitignore
nemo-acl-editor/: AUTHORS  README  configure.ac
nemo-acl-editor/po/: POTFILES.in
nemo-acl-editor/src/: Makefile.am  eiciel.appdata.xml  eiciel_nemo_page.cpp  eiciel_nemo_page.hpp
